fix home img margin-top on mobile

--- a/src/components/AboutUs/index.scss
+++ b/src/components/AboutUs/index.scss
@@ -12,7 +12,7 @@
         width: 50%;
     }
     img {
-        width: 65vw;
+        // width: 65vw;
         margin-top: 40px;
         margin-bottom: 80px;
     }
@@ -21,4 +21,26 @@
 
 #brand-philosophy {
     width: 100vw;
+}
+
+@media screen and (max-width: 768px) {
+    .about-us {
+        h1 {
+            font-size: 32px;
+        }
+        p {
+            width: 80%;
+        }
+        img {
+            width: 100vw;
+            margin-bottom: 0px;
+        }
+    }
+}
+@media screen and (min-width: 769px) {
+    .about-us {
+        img {
+            width: 65vw;
+        }
+    }
 }
