--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -26,7 +26,7 @@
     .home {
         & > picture {
             & > img {
-                margin-top: 50px;
+                margin-top: 80px;
             }
         }
     }
